[package]
description = "Parity Miner interface."
name = "ethcore-miner"
homepage = "http://parity.io"
license = "GPL-3.0"
version = "1.12.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
# Only work_notify, consider a separate crate
equihash = { path = "../equihash", optional = true }
fetch = { path = "../util/fetch", optional = true }
hyper = { version = "0.12", optional = true }
url = { version = "1", optional = true }

# Miner
ansi_term = "0.10"
common-types = { path = "../ethcore/types" }
error-chain = "0.12"
ethabi = "6.0"
ethabi-derive = "6.0"
ethabi-contract = "6.0"
ethcore-call-contract = { path = "../ethcore/call-contract" }
ethereum-types = "0.4"
futures = "0.1"
heapsize = "0.4"
keccak-hash = "0.1"
linked-hash-map = "0.5"
log = "0.4"
parity-runtime = { path = "../util/runtime" }
parking_lot = "0.7"
price-info = { path = "./price-info", optional = true }
rlp = { version = "0.3.0", features = ["ethereum"] }
trace-time = "0.1"
transaction-pool = "2.0"
zcash_primitives = { path = "../ct-lib/zcash_primitives" }
sapling-crypto = { path = "../ct-lib/sapling-crypto" }
pairing = { path = "../ct-lib/pairing" }
zcash_proofs = { path = "../ct-lib/zcash_proofs" }
bellman = { path = "../ct-lib/bellman" }
ethcore-blockchain = { path = "../ethcore/blockchain" }
ff = { path = "../ct-lib/ff" }
rand = "0.4"

[dev-dependencies]
env_logger = "0.5"
ethkey = { path = "../accounts/ethkey" }
rustc-hex = "1.0"

[features]
work-notify = ["equihash", "fetch", "hyper", "url"]
