[package]
description = "Ethcore blockchain database"
homepage = "http://parity.io"
license = "GPL-3.0"
name = "ethcore-blockchain"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
ansi_term = "0.10"
blooms-db = { path = "../../util/blooms-db" }
common-types = { path = "../types" }
ethcore-db = { path = "../db" }
ethereum-types = "0.4"
heapsize = "0.4"
itertools = "0.5"
kvdb = "0.1"
log = "0.4"
parity-bytes = "0.1"
parking_lot = "0.7"
rayon = "1.0"
rlp = { version = "0.3.0", features = ["ethereum"] }
rlp_compress = { path = "../../util/rlp-compress" }
rlp_derive = { path = "../../util/rlp-derive" }
dir = { path = "../../util/dir" }
ethstore = {path = "../../accounts/ethstore"}



bellman = { path = "../../ct-lib/bellman" }
zip32 = { path = "../../ct-lib/zip32" }
pairing = { path = "../../ct-lib/pairing" }
group = { path = "../../ct-lib/group" }
ff = { path = "../../ct-lib/ff" }
librustzcash = { path = "../../ct-lib/librustzcash" }
zcash_primitives = { path = "../../ct-lib/zcash_primitives" }
zcash_proofs = { path = "../../ct-lib/zcash_proofs" }
sapling-crypto = { path = "../../ct-lib/sapling-crypto" }

bech32 = "0.6.0"
lazy_static = "1.3.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
rustc-hex = "2"

failure = "0.1"
byteorder = "1"
rand = "0.4"
hex = "0.3"

backtrace = "0.3"


[dev-dependencies]
env_logger = "0.5"
ethkey = { path = "../../accounts/ethkey" }
keccak-hash = "0.1"
tempdir = "0.3"
kvdb-memorydb = "0.1"
